Netdisco/share/views/plugin/age/age.css
.nd_old-info-warning {
  position: fixed;
  bottom: 0px;
  width: 100%;
  padding: 4px;
  
  background-color: #FFC;
  border: 3px solid #FF0;
  border-radius: 4px 4px 4px 4px;
}

.nd_old-info-warning:hover {
  cursor: pointer;
}

.nd_old-info-warning * {
  text-align: center;
  margin: 0;
}

